Thu Oct 24 16:07:17 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* main.c (startup_children, runtime_children): New variables.
	(startup_parents, runtime_parents): Variables removed.
	(startup_argp, runtime_argp): Use new *_CHILDREN variables instead of
	corresponding *_PARENT ones.

Thu Sep 19 18:02:40 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): Add store.

Wed Sep 18 15:30:00 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* inode.c (diskfs_S_file_get_storage_info): Narrow scope of RUN.

	* consts.c (diskfs_extra_version): New variable.

	* main.c (main): Remove CLASSES argument to store_parsed_open.
	Use STORE_PARAMS variable to get result from parsing STORE_ARGP.
	Don't force COMPAT_GNU on bootstrap filesystems (it's the default
	anyway).

Mon Sep 16 13:27:38 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (ufs.static ufs): Add ../libstore/libstore.a.

	* hyper.c (zeroblock): Change type to `void *'.
	(get_hypermetadata): Cast ZEROBLOCK when vm_{de,}allocating.
	* ufs.h (zeroblock): Change type to `void *'.
	* sizes.c (diskfs_truncate): Don't cast ZEROBLOCK to diskfs_node_rw.
	(block_extended, diskfs_grow): Do cast it to offer_data.

	* main.c (main): Don't set DISKFS_USE_MACH_DEVICE (which is no longer).

	* inode.c (diskfs_S_file_get_storage_info): Coalesce adjacent
	blocks when constructing RUNS.
	Set *PORTS_TYPE, not *STORAGE_PORT_TYPE.
	* inode.c (diskfs_S_file_getfh): Variable ERR removed.

	* sizes.c (indir_release): Use DISKFS_DISK_PAGER instead of DISK_PAGER.
	* ufs.h (sync_disk_blocks): Likewise.
	* pokeloc.c (sync_disk): Likewise.
	* main.c (diskfs_reload_global_state): Likewise.
	* pager.c (create_disk_pager, diskfs_shutdown_pager,
	diskfs_sync_everything): Likewise.
	* main.c <argp.h>, <hurd/store.h>: New includes.
	* hyper.c, pager.c, inode.c <hurd/store.h>: New include.
	(get_hypermetadata): Use %Zd for printfing size_t.
	(diskfs_set_hypermetadata): Return EIO for incomplete writes.
	Cast BUF when calling vm_deallocate.
